manifests/broadcaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-master
  name: project-broadcaster-dep
spec:
  replicas: 6 
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project-broadcaster
          image: PROJECT/IMAGE_BROADCASTER
          resources:
            limits:
              cpu: "50m"
              memory: "200Mi"
