manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-namespace
  name: project-dep
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: volume0
          emptyDir: {}
      containers:
        - name: project-server
          image: PROJECT/IMAGE_SERVER
          resources:
            limits:
              cpu: "50m"
              memory: "300Mi"
          volumeMounts:
          - name: volume0
            mountPath: /usr/src/app/files
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3001
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3001
        - name: project-client
          image: PROJECT/IMAGE_CLIENT
          resources:
            limits:
              cpu: "50m"
              memory: "300Mi"
          volumeMounts:
          - name: volume0
            mountPath: /usr/src/app/files
