manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: project-dep
  namespace: project-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  strategy:
    canary:
      steps:
      - analysis:
          templates:
          - templateName: cpu-usage-rate
      - setWeight: 100
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: volume0
          emptyDir: {}
      containers:
        - name: project-server
          image: PROJECT/IMAGE_SERVER
          resources:
            limits:
              cpu: "100m"
              memory: "300Mi"
          volumeMounts:
          - name: volume0
            mountPath: /usr/src/app/files
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3001
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /healthz
              port: 3001
        - name: project-client
          image: PROJECT/IMAGE_CLIENT
          resources:
            limits:
              cpu: "100m"
              memory: "300Mi"
          volumeMounts:
          - name: volume0
            mountPath: /usr/src/app/files
        - name: project-broadcaster
          image: PROJECT/IMAGE_BROADCASTER
          resources:
            limits:
              cpu: "50m"
              memory: "300Mi"
