manifests/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-client-svc
spec:
  type: ClusterIP
  selector:
    app: project 
  ports:
    - protocol: TCP
      port: 2348 
      targetPort: 3000
