manifests/db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project-namespace
  name: project-db-svc
  labels:
    app: project-db
spec:
  ports:
  - port: 5432
  clusterIP: None
  selector:
    app: project-db

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project-namespace
  name: project-db-ss
spec:
  serviceName: project-db-svc
  replicas: 1 
  selector:
    matchLabels:
      app: project-db
  template:
    metadata:
      labels:
        app: project-db
    spec:
      containers:
      - name: project-db
        image: postgres
        ports:
        - name: db-port
          containerPort: 5432
        volumeMounts:
        - name: database
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: database
      namespace: project-namespace
    spec: 
      accessModes: ["ReadWriteOnce"]
      # storageClassName: local-path
      resources:
        requests:
          storage: 100Mi
