manifests/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project-master
  name: project-server-svc
spec:
  type: NodePort
  selector:
    app: project
  ports:
    - protocol: TCP
      port: 2345 
      targetPort: 3001
