manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-ing
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /graphql
        backend:
          service:
            name: project-server-svc
            port:
              number: 2345
      - pathType: Prefix
        path: /
        backend:
          service:
            name: project-client-svc
            port:
              number: 2348
